# copycatDemo

./: .gitignore  README.md  flask_run.sh  package-lock.json  pyproject.toml  pytest.ini
copycat/: common.py  config.py  import_methods.py  webserver.py
copycat-client/: .eslintrc.js  .npmrc  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
copycat-client/public/: index.html
copycat-client/src/: AnnotationRendering.tsx  App.tsx  GraphRendering.ts  Next.tsx  VafRendering.tsx  index.tsx
copycat-client/src/common/: ReactHelper.ts  callHelper.ts  chromosomeTranslation.ts  common.ts  userInteraction.ts
copycat-client/src/components/: BasicCallItem.tsx  BasicList.scss  BasicList.tsx  CallGraph.scss  CallGraph.tsx  CallList.scss  CallList.tsx  CnvCallItem.scss  CnvCallItem.tsx  CopyRatioGlyph.scss  CopyRatioGlyph.ts  LengthGlyph.scss  LengthGlyph.ts  MiniPlaceHolder.ts  OutsideDomainArrow.tsx  SmallCnvCallItem.scss  SmallCnvCallItem.tsx  StartPageApp.tsx  _ControllerCommon.scss  _ImportBaseCommon.scss  coverageGlyph.scss  coverageGlyph.ts  drawOutsideDomainArrow.ts  tooltip.tsx  vafGlyph.scss  vafGlyph.ts
copycat-client/src/models/: segment.ts
copycat-client/src/services/: api.ts  saveInteraction.ts
copycat-client/src/styles/: App.css  App.scss  _colors.scss  (+1 more)
copycat/demo/: 1.cnn  1.cns  README.md  comparison.targetcoverage  temp.vcf.gz.tbi
tests/: test_parse_annotations.py  test_parse_annotations_1000.py  test_parse_bed.py  test_parse_bed_1000.py  test_parse_bed_liu.py  test_parse_vcf.py  test_parse_vcf_1000.py  test_parse_vcf_liu.py
(+3 files in other folders)
